@@ -117,31 +117,57 @@
   (interactive)
   (goto-char (point-min))
   (replace-string "Á" "\\U00C1")
+  (goto-char (point-min))
   (replace-string "É" "\\U00C9")
+  (goto-char (point-min))
   (replace-string "Í" "\\U00CD")
+  (goto-char (point-min))
   (replace-string "Ó" "\\U00D3")
+  (goto-char (point-min))
   (replace-string "Ú" "\\U00DA")
+  (goto-char (point-min))
   (replace-string "á" "\\U00E1")
+  (goto-char (point-min))
   (replace-string "é" "\\U00E9")
+  (goto-char (point-min))
   (replace-string "í" "\\U00ED")
+  (goto-char (point-min))
   (replace-string "ó" "\\U00F3")
+  (goto-char (point-min))
   (replace-string "ú" "\\U00FA")
+  (goto-char (point-min))
   (replace-string "Ü" "\\U00DC")
+  (goto-char (point-min))
   (replace-string "ü" "\\U00FC")
+  (goto-char (point-min))
   (replace-string "¡" "\\U00A1")
+  (goto-char (point-min))
   (replace-string "¿" "\\U00BF")
+  (goto-char (point-min))
   (replace-string "Ñ" "\\U00D1")
+  (goto-char (point-min))
   (replace-string "ñ" "\\U00F1")
+  (goto-char (point-min))
   (replace-string "Ä" "\\U00C4")
+  (goto-char (point-min))
   (replace-string "Ö" "\\U00D6")
+  (goto-char (point-min))
   (replace-string "ß" "\\U00DF")
+  (goto-char (point-min))
   (replace-string "ä" "\\U00E4")
+  (goto-char (point-min))
   (replace-string "ö" "\\U00F6")
+  (goto-char (point-min))
   (replace-string "Ç" "\\U00C7")
+  (goto-char (point-min))
   (replace-string "ç" "\\U00E7")
+  (goto-char (point-min))
   (replace-string "Ë" "\\U00CB")
+  (goto-char (point-min))
   (replace-string "Ï" "\\U00CF")
+  (goto-char (point-min))
   (replace-string "ë" "\\U00EB")
+  (goto-char (point-min))
   (replace-string "ï" "\\U00EF")
   )
 
